Fabio: Ajustes para paquete en transmisitp